// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Zero page error error when operator is incomplete 1`] = `
{
  "errors": [
    {
      "kind": 1,
      "lineRange": {
        "end": [
          1,
          3,
        ],
        "start": [
          1,
          1,
        ],
      },
      "message": "Unexpected identifier: LD, expected an instruction",
      "range": [
        0,
        2,
      ],
    },
  ],
  "originalLines": [
    "LD $00",
  ],
  "program": {
    "kind": "p",
    "lines": [],
    "range": [
      0,
      6,
    ],
  },
}
`;

exports[`Zero page mode simple - len 4 1`] = `
{
  "errors": [],
  "originalLines": [
    "LDA $a1",
  ],
  "program": {
    "kind": "p",
    "lines": [
      {
        "comment": undefined,
        "contents": {
          "instructionKind": 1,
          "kind": "i",
          "operand": {
            "kind": "zp0",
            "range": [
              4,
              7,
            ],
            "value": {
              "kind": "vl",
              "originalStringValue": "a1",
              "range": [
                4,
                7,
              ],
              "valueLiteralKind": "hex",
            },
          },
          "operator": {
            "kind": "or",
            "range": [
              0,
              3,
            ],
            "value": "lda",
          },
          "range": [
            0,
            7,
          ],
        },
        "kind": "l",
        "range": [
          0,
          7,
        ],
      },
    ],
    "range": [
      0,
      7,
    ],
  },
}
`;

exports[`Zero page mode simple - zeros 1`] = `
{
  "errors": [],
  "originalLines": [
    "LDA $0A",
  ],
  "program": {
    "kind": "p",
    "lines": [
      {
        "comment": undefined,
        "contents": {
          "instructionKind": 1,
          "kind": "i",
          "operand": {
            "kind": "zp0",
            "range": [
              4,
              7,
            ],
            "value": {
              "kind": "vl",
              "originalStringValue": "0A",
              "range": [
                4,
                7,
              ],
              "valueLiteralKind": "hex",
            },
          },
          "operator": {
            "kind": "or",
            "range": [
              0,
              3,
            ],
            "value": "lda",
          },
          "range": [
            0,
            7,
          ],
        },
        "kind": "l",
        "range": [
          0,
          7,
        ],
      },
    ],
    "range": [
      0,
      7,
    ],
  },
}
`;

exports[`Zero page mode with ascii - multiple 1`] = `
{
  "errors": [],
  "originalLines": [
    "LDA.b "abc"",
  ],
  "program": {
    "kind": "p",
    "lines": [
      {
        "comment": undefined,
        "contents": {
          "instructionKind": 1,
          "kind": "i",
          "operand": {
            "kind": "zp0",
            "range": [
              6,
              11,
            ],
            "value": {
              "kind": "vl",
              "originalStringValue": "abc",
              "range": [
                6,
                11,
              ],
              "valueLiteralKind": "ascii",
            },
          },
          "operator": {
            "forcedTo": "b",
            "kind": "or",
            "range": [
              0,
              5,
            ],
            "value": "lda",
          },
          "range": [
            0,
            11,
          ],
        },
        "kind": "l",
        "range": [
          0,
          11,
        ],
      },
    ],
    "range": [
      0,
      11,
    ],
  },
}
`;

exports[`Zero page mode with ascii 1`] = `
{
  "errors": [],
  "originalLines": [
    "LDA.b "a"",
  ],
  "program": {
    "kind": "p",
    "lines": [
      {
        "comment": undefined,
        "contents": {
          "instructionKind": 1,
          "kind": "i",
          "operand": {
            "kind": "zp0",
            "range": [
              6,
              9,
            ],
            "value": {
              "kind": "vl",
              "originalStringValue": "a",
              "range": [
                6,
                9,
              ],
              "valueLiteralKind": "ascii",
            },
          },
          "operator": {
            "forcedTo": "b",
            "kind": "or",
            "range": [
              0,
              5,
            ],
            "value": "lda",
          },
          "range": [
            0,
            9,
          ],
        },
        "kind": "l",
        "range": [
          0,
          9,
        ],
      },
    ],
    "range": [
      0,
      9,
    ],
  },
}
`;

exports[`Zero page mode with binary 1`] = `
{
  "errors": [],
  "originalLines": [
    "LDA.b %0101",
  ],
  "program": {
    "kind": "p",
    "lines": [
      {
        "comment": undefined,
        "contents": {
          "instructionKind": 1,
          "kind": "i",
          "operand": {
            "kind": "zp0",
            "range": [
              6,
              11,
            ],
            "value": {
              "kind": "vl",
              "originalStringValue": "0101",
              "range": [
                6,
                11,
              ],
              "valueLiteralKind": "bin",
            },
          },
          "operator": {
            "forcedTo": "b",
            "kind": "or",
            "range": [
              0,
              5,
            ],
            "value": "lda",
          },
          "range": [
            0,
            11,
          ],
        },
        "kind": "l",
        "range": [
          0,
          11,
        ],
      },
    ],
    "range": [
      0,
      11,
    ],
  },
}
`;

exports[`Zero page mode with decimal 1`] = `
{
  "errors": [],
  "originalLines": [
    "LDA.b 12345",
  ],
  "program": {
    "kind": "p",
    "lines": [
      {
        "comment": undefined,
        "contents": {
          "instructionKind": 1,
          "kind": "i",
          "operand": {
            "kind": "zp0",
            "range": [
              6,
              11,
            ],
            "value": {
              "kind": "vl",
              "originalStringValue": "12345",
              "range": [
                6,
                11,
              ],
              "valueLiteralKind": "dec",
            },
          },
          "operator": {
            "forcedTo": "b",
            "kind": "or",
            "range": [
              0,
              5,
            ],
            "value": "lda",
          },
          "range": [
            0,
            11,
          ],
        },
        "kind": "l",
        "range": [
          0,
          11,
        ],
      },
    ],
    "range": [
      0,
      11,
    ],
  },
}
`;

exports[`Zero page mode with symbol 1`] = `
{
  "errors": [],
  "originalLines": [
    "LDA.b lbl",
  ],
  "program": {
    "kind": "p",
    "lines": [
      {
        "comment": undefined,
        "contents": {
          "instructionKind": 1,
          "kind": "i",
          "operand": {
            "kind": "zp0",
            "range": [
              6,
              9,
            ],
            "value": {
              "kind": "r",
              "range": [
                6,
                9,
              ],
              "referencedName": "lbl",
            },
          },
          "operator": {
            "forcedTo": "b",
            "kind": "or",
            "range": [
              0,
              5,
            ],
            "value": "lda",
          },
          "range": [
            0,
            9,
          ],
        },
        "kind": "l",
        "range": [
          0,
          9,
        ],
      },
    ],
    "range": [
      0,
      9,
    ],
  },
}
`;
